# ghquant_plugin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: quant-auditor.md  quant-coder.md  quant-diagnoser.md  quant-extractor.md  quant-planner.md  quant-reporter.md  quant-verifier.md
.claude/skills/: reproduce
.codex-plugin/: plugin.json
.codex/agents/: quant-auditor.toml  quant-coder.toml  quant-diagnoser.toml  quant-extractor.toml  quant-oos-analyst.toml  quant-planner.toml  quant-reporter.toml  quant-verifier.toml
agents/: quant-auditor.md  quant-coder.md  quant-diagnoser.md  quant-extractor.md  quant-oos-analyst.md  quant-planner.md  quant-reporter.md  quant-verifier.md
common/: __init__.py  allocation_backtest.py  backtest.py  data_loader.py  ml_liquid.py  ml_pipeline.py  ml_portfolio.py  ml_reporting.py  ml_training.py  timing_backtest.py  utils.py
docs/: plugin-overview.html
docs/legacy/: agents-CLAUDE.md  agents-reproduce.md  (+3 more)
templates/: _plan_template.md  _spec_template.md  allocation.md  data_catalog.md  factor.md  fixed_income.md  ml.md  standards.json  timing.md
tests/: test_check_gates.py  test_data_loader_config.py  test_dual_host_contract.py  test_external_review.py  test_pdf_extract.py  test_render_report.py  test_setup_workspace.py  test_state.py  test_sync_codex_agents.py
tools/: __init__.py  check_gates.py  external_review.py  pdf_extract.py  render_report.py  setup_workspace.py  state.py  sync_codex_agents.py
(+111 files in other folders)
