[project]
name = "report-reproduce"
version = "0.1.0"
description = "量化研报复现项目：按类型与难度差异化复现选股因子/择时/资产配置/固收/机器学习类研报"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
# ML 类研报按需安装：uv sync --extra ml
ml = [
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "torch>=2.0",
]

[tool.uv]
# 纯环境管理，本项目不作为可安装包构建
package = false
