[project]
name = "report-reproduce"
version = "0.1.0"
description = "量化研报复现项目：按类型与难度差异化复现选股因子/择时/资产配置/固收/机器学习类研报"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "torch>=2.12.1",
    "ncps",
]

[project.optional-dependencies]
# ML 类研报按需安装：uv sync --extra ml
ml = [
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "torch>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
# 仅收集 tests/（T1 新增的工具测试）；src/{report_id}/ 下各案例自带的旧式
# unittest 用例（如 src/test/test_strategy.py）不在此默认发现范围内，
# 避免 `uv run pytest` 因其独立的导入约定（需 PYTHONPATH=repo 根）而报错。
testpaths = ["tests"]

[tool.uv]
# 纯环境管理，本项目不作为可安装包构建
package = false

[tool.uv.sources]
ncps = { git = "https://github.com/mlech26l/ncps", rev = "695ec22d7d1831f2ced67346ef7d2f08c525bd47" }
